fixed text overlapping on resizes

--- a/public/main.css
+++ b/public/main.css
@@ -231,33 +231,27 @@ input {
 
 .page-content .content-grid article .text-overlay {
     display: none;
+    position: absolute;
+    padding: 10px;
+    width: 100%;
+    height: 100%;
 }
 
-.page-content .content-grid article .text-overlay h4 {
-    position: absolute;
-    top: 50%;
-    left: 51%;
-    padding-bottom: 3px;
-    margin-bottom: 3px;
-    line-height: 1.5;
-    width: 100%;
-    transform: translate(-50%, -50%);
-}
-
-.page-content .content-grid article .text-overlay h5 {
-    position: absolute;
-    top: 60%;
-    left: 51%;
-    line-height: 36px;
-    width: 100%;
-    transform: translate(-50%, -50%);
-}
 
 .page-content .content-grid article h4 {
     display: inline-block;
     position: absolute;
-    font-size: 40px;
+    font-size: 50px;
     color: white;
+    bottom: 20%;
+}
+
+.page-content .content-grid article h5 {
+    display: inline-block;
+    position: absolute;
+    font-size: 30px;
+    color: white;
+    bottom: 10%;
 }
 
 .page-content .content-grid article .article-badge-button {
@@ -268,7 +262,6 @@ input {
     position: absolute;
 }
 
-
 .page-content .content-grid article .article-badge-button svg {
     max-width: 50px;
     height: auto;
@@ -276,12 +269,6 @@ input {
     fill: #ff781f;
 }
 
-.page-content .content-grid article h5 {
-    display: inline-block;
-    position: absolute;
-    font-size: 20px;
-    color: white;
-}
 
 /*==== search bar ====*/
 .search {
@@ -515,23 +502,21 @@ input {
         position: absolute;
     }
 
-    .page-content .content-grid article .text-overlay h4 {
+
+    .page-content .content-grid article h4 {
+        display: inline-block;
         position: absolute;
-        font-size: 15px;
-        top: 50%;
-        padding-bottom: 2px;
-        left: 51%;
-        width: 100%;
-        transform: translate(-50%, -50%);
+        font-size: 30px;
+        color: white;
+        bottom: 20%;
     }
     
-    .page-content .content-grid article .text-overlay h5 {
+    .page-content .content-grid article h5 {
+        display: inline-block;
         position: absolute;
-        font-size: 7px;
-        top: 61%;
-        left: 51%;
-        width: 100%;
-        transform: translate(-50%, -50%);
+        font-size: 20px;
+        color: white;
+        bottom: 10%;
     }
 }
 
